   Version 0.49
   Version 0.48
   Version 0.47
   Version 0.46
   Version 0.45
   Version 0.44
   Version 0.43
   Version 0.42
   Version 0.41
   Version 0.40
   Version 0.39
   Version 0.38
   Version 0.37
   Version 0.36
   Version 0.35

-----------------------------------------------------------------------
 Version 0.59
 ============

 Released on 
  
 New features and improvements:

   - Rename the application to Open Firm Accounting (todo #1164).
   - BatTreeview: add a Notes indicator (todo #1157).
   - ClassPage: add a Notes indicator (todo #1157).
   - CurrencyPage: add a Notes indicator (todo #1157).
   - CurrencyPage: make the treeview sortable.
   - LedgerPage: add a Notes indicator (todo #1157).
   - OpeTemplateFrame: add a Notes indicator (todo #1157).
   - RecurrentManagePage: add a Notes indicator (todo #1157).
   - VATManagePage: add a Notes indicator (todo #1157).

 Bug fixes:

   - GuidedInput: take into account the user set ledger (todo #1152).
   - RecurrentRun: fix validation status recording (todo #1176).
   - SettlementPage: fix column header (todo #1148).
   - Style: fix selector change introduced with Gtk 3.20 (todo #1171).

 Other changes:

   - myStyle: new style management class.
   - ofa.css: remove obsolete styles.

-----------------------------------------------------------------------
 Version 0.58
 ============

 Released on 2016-06-26
  
 New features and improvements:

   - RecurrentOperation: DB Model v3.
   - RecurrentOperation: make periodicity detail mandatory.
   - RecurrentManagement: improve detail column sort (todo #1146).
   - RecurrentManagement: generate operations on selected models (todo #1140).
   - UserPreferences: have a preference to edit date in overwrite mode (todo #707).
   - VAT: put its own icon on operation templates pages (todo #1138).
   - VAT: introduce the %BALANCE() function (todo #1158).
 
 Bug fixes:

   - Dossier: fix minimal effect date computing (todo #1144).