@@ -403,8 +403,7 @@
                 does not get sensitive when toggled
 
 1172 2016- 7-11 Gtk-WARNING **: Allocating size to ofaMainWindow 0x99e400 without calling gtk_widget_get_preferred_width/height(). How does the code know the size to allocate?
-
-1173 2016- 7- 5 BUG: unable to import boursorama 30/6
+                when opening the first page
 
 1174 2016- 7- 5 BUG: when importing via the assistant, provided stream
                 format has character encoding set, but empty
@@ -1546,6 +1545,10 @@
 1171 2016- 6- 7 BUG: style no more works
      2016- 6- 7 This is due to a change in main CSS selector
      2016- 7-11 fixed
+
+1173 2016- 7- 5 BUG: unable to import boursorama 30/6
+     2016- 7-11 first time we have two pages
+                -> fixed
 
 1176 2016- 7-11 BUG: Recurrent: validating operation is not recorded
      2016- 7-11 because of auto-increment, did not have numseq up to date
